update packages and fixing the bug with sliding to right on mobile

--- a/src/app/pages/home/components/main/main.component.scss
+++ b/src/app/pages/home/components/main/main.component.scss
@@ -2,8 +2,6 @@
 
 .container {
   max-width: 740px;
-  padding: 0px;
-  margin: auto;
   width: 100%;
   margin-top: 80px;
   //background-color: $light-gray;
@@ -17,9 +15,7 @@
 @media screen and (max-width: 768px) {
   .container {
     .content {
-      .new-post-container {
-        padding: 10px;
-      }
+      padding: 10px;
     }
   }
 }
